--- a/pom.xml
+++ b/pom.xml
@@ -143,13 +143,13 @@
                 </configuration>
             </plugin>
 
-            <!--自动生成mapper、PO文件，添加mybatis generator maven插件-->
+        <!--自动生成mapper、PO文件，添加mybatis generator maven插件
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.5</version>
                 <configuration>
-                    <!--generatorConfig.xml位置-->
+                    注释：generatorConfig.xml位置
                     <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
@@ -163,7 +163,7 @@
                         <phase>generate-sources</phase>
                     </execution>
                 </executions>
-                <!--此处必须添加mysql驱动包-->
+                注释：此处必须添加mysql驱动包
                 <dependencies>
                     <dependency>
                         <groupId>mysql</groupId>
@@ -173,6 +173,7 @@
                     </dependency>
                 </dependencies>
             </plugin>
+        -->
         </plugins>
     </build>
 
