--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8082
 
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/xnyc-blog?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mybatis/*.xml
